# ABM_Benefits

./: LICENSE  README.md  pyproject.toml
data/: README.md
docs/: DATA_ACCESS.md  ODD_protocol.md  data_dictionary.md
experiments/configs/: baseline.yaml  full_dynamics.yaml
params/: earnings.json  employment.json  health_dynamics.json  takeup.json  utility.json
reports/: D1.2_Social_Services_ABM.docx  build_report.js
src/estimation/: _prep.py  estimate.py  load_ukhls.py
src/experiments/: abc_calibrate.py  calibrate.py  make_report_figures.py  run.py  run_calibration_validation.py  run_cost_effectiveness.py  run_mortality.py  run_spatial.py  sensitivity.py  validate.py
src/model/: agents.py  config.py  demography.py  model.py  params.py  space.py
src/population/: synthesize.py
src/welfare/: costs.py  runner.py  welfare.py
tests/: test_calibration_validation.py  test_costs.py  test_load_ukhls.py  test_model.py  test_mortality.py  test_population.py  test_population_dynamics.py  test_spatial.py  test_welfare.py
